fix: disable FFM API warning